# hi-ccc

./: ccc.cabal  stack.yaml
app/: Main.hs
